@@ -5,44 +5,8 @@
 # (copied from Spyder source code [spyderlib.qt])
 
 import os
-
 if os.environ['PYTHON_QT_LIBRARY'] == 'PyQt4':
     from PyQt4.QtCore import *
-    try:
-        from PyQt4.QtCore import QVariant
-        QVARIANT_EXISTS = True # PyQt API #1
-    except ImportError:
-        QVARIANT_EXISTS = False # PyQt API #2
-    def to_qvariant(pyobj=None):
-        """Convert Python object to QVariant
-        This is a transitional function from PyQt API #1 (QVariant exist) 
-        to PyQt API #2 and Pyside (QVariant does not exist)"""
-        if QVARIANT_EXISTS:
-            # PyQt API #1
-            return QVariant(pyobj)
-        else:
-            # PyQt API #2
-            return pyobj
-    def from_qvariant(qobj=None, convfunc=None):
-        """Convert QVariant object to Python object
-        This is a transitional function from PyQt API #1 (QVariant exist) 
-        to PyQt API #2 and Pyside (QVariant does not exist)"""
-        if QVARIANT_EXISTS:
-            # PyQt API #1
-            assert callable(convfunc)
-            if convfunc in (unicode, str):
-                return convfunc(qobj.toString())
-            elif convfunc is bool:
-                return qobj.toBool()
-            elif convfunc is int:
-                return qobj.toInt()[0]
-            elif convfunc is float:
-                return qobj.toDouble()[0]
-            else:
-                return convfunc(qobj)
-        else:
-            # PyQt API #2
-            return qobj
     from PyQt4.Qt import QCoreApplication
     from PyQt4.Qt import Qt
     from PyQt4.QtCore import pyqtSignal as Signal
@@ -53,13 +17,3 @@ else:
     import PySide.QtCore
     __version__ = PySide.QtCore.__version__
     from PySide.QtCore import *
-    def to_qvariant(obj=None):
-        """Convert Python object to QVariant
-        This is a transitional function from PyQt API#1 (QVariant exist) 
-        to PyQt API#2 and Pyside (QVariant does not exist)"""
-        return obj
-    def from_qvariant(qobj=None, pytype=None):
-        """Convert QVariant object to Python object
-        This is a transitional function from PyQt API #1 (QVariant exist) 
-        to PyQt API #2 and Pyside (QVariant does not exist)"""
-        return qobj
